src/com/elikill58/negativity/api/maths/syntaxchecker/SyntaxChecker.java
/* SyntaxChecker.java */
/* Generated By:JavaCC: Do not edit this line. SyntaxChecker.java */
package com.elikill58.negativity.api.maths.syntaxchecker;

public final class SyntaxChecker implements SyntaxCheckerConstants {
	public final void checkSyntax() throws ParseException, TokenMgrError {
		start();
	}

	/*
	 * Lexer logic - grammar
	 */
	final public void start() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case LEFT_PAR:
		case PLUS:
		case MINUS:
		case UNIT:
		case NOT:
		case BITNOT:
		case DECIMAL:
		case BASE1:
		case BASE2:
		case BASE3:
		case BASE4:
		case BASE5:
		case BASE6:
		case BASE7:
		case BASE8:
		case BASE9:
		case BASE10:
		case BASE11:
		case BASE12:
		case BASE13:
		case BASE14:
		case BASE15:
		case BASE16:
		case BASE17:
		case BASE18:
		case BASE19:
		case BASE20:
		case BASE21:
		case BASE22:
		case BASE23:
		case BASE24:
		case BASE25:
		case BASE26:
		case BASE27:
		case BASE28:
		case BASE29:
		case BASE30:
		case BASE31:
		case BASE32:
		case BASE33:
		case BASE34:
		case BASE35:
		case BASE36:
		case BINARY:
		case OCTAL:
		case HEXADECIMAL:
		case FRACTION:
		case IDENTIFIER:
		case FUNCTION:
		case 125: {
			expression();
			jj_consume_token(0);
			break;
		}
		case 0: {
			jj_consume_token(0);
			break;
		}
		default:
			jj_la1[0] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	/*
	 * Grammar for expression
	 */
	final public void expression() throws ParseException {
		binaryExpression();
	}

	/*
	 * Grammar for binary operators
	 */
	final public void binaryExpression() throws ParseException {
		unaryRigthExpression();
		label_1: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case PLUS:
			case MINUS:
			case MULTIPLY:
			case DIV:
			case POWER:
			case TETRATION:
			case MODULO:
			case EQ:
			case NEQ:
			case LT:
			case LEQ:
			case GT:
			case GEQ:
			case OR:
			case AND:
			case IMP:
			case CIMP:
			case NIMP:
			case CNIMP:
			case NAND:
			case EQV:
			case NOR:
			case BITWISE:
			case XOR: {
				;
				break;
			}
			default:
				jj_la1[1] = jj_gen;
				break label_1;
			}
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case PLUS: {
				jj_consume_token(PLUS);
				unaryRigthExpression();
				break;
			}
			case MINUS: {
				jj_consume_token(MINUS);
				unaryRigthExpression();
				break;
			}
			case MULTIPLY: {
				jj_consume_token(MULTIPLY);
				unaryRigthExpression();
				break;
			}
			case DIV: {
				jj_consume_token(DIV);
				unaryRigthExpression();
				break;
			}
			case MODULO: {
				jj_consume_token(MODULO);
				unaryRigthExpression();
				break;
			}
			case POWER: {
				jj_consume_token(POWER);
				unaryRigthExpression();
				break;
			}
			case TETRATION: {
				jj_consume_token(TETRATION);
				unaryRigthExpression();
				break;
			}
			case EQ: {
				jj_consume_token(EQ);
				unaryRigthExpression();
				break;
			}
			case NEQ: {
				jj_consume_token(NEQ);
				unaryRigthExpression();
				break;
			}
			case GT: {
				jj_consume_token(GT);
				unaryRigthExpression();
				break;
			}
			case GEQ: {
				jj_consume_token(GEQ);
				unaryRigthExpression();
				break;
			}
			case LT: {
				jj_consume_token(LT);
				unaryRigthExpression();
				break;
			}
			case LEQ: {
				jj_consume_token(LEQ);
				unaryRigthExpression();
				break;
			}
			case OR: {
				jj_consume_token(OR);
				unaryRigthExpression();
				break;
			}
			case AND: {
				jj_consume_token(AND);
				unaryRigthExpression();
				break;
			}
			case NOR: {
				jj_consume_token(NOR);
				unaryRigthExpression();
				break;
			}
			case NAND: {
				jj_consume_token(NAND);
				unaryRigthExpression();
				break;
			}
			case XOR: {
				jj_consume_token(XOR);
				unaryRigthExpression();
				break;
			}
			case IMP: {
				jj_consume_token(IMP);
				unaryRigthExpression();
				break;
			}
			case CIMP: {
				jj_consume_token(CIMP);
				unaryRigthExpression();
				break;
			}
			case NIMP: {
				jj_consume_token(NIMP);
				unaryRigthExpression();
				break;
			}
			case CNIMP: {
				jj_consume_token(CNIMP);
				unaryRigthExpression();
				break;
			}
			case EQV: {
				jj_consume_token(EQV);
				unaryRigthExpression();
				break;
			}
			case BITWISE: {
				jj_consume_token(BITWISE);
				unaryRigthExpression();
				break;
			}
			default:
				jj_la1[2] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
	}

	/*
	 * Grammar for unary rigth operators
	 */
	final public void unaryRigthExpression() throws ParseException {
		unaryLeftExpression();
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case FACTORIAL:
		case PERCENTAGE: {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case FACTORIAL: {
				jj_consume_token(FACTORIAL);
				break;
			}
			case PERCENTAGE: {
				jj_consume_token(PERCENTAGE);
				break;
			}
			default:
				jj_la1[3] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			break;
		}
		default:
			jj_la1[4] = jj_gen;
			;
		}
	}

	/*
	 * Grammar for unary left operators
	 */
	final public void unaryLeftExpression() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case NOT:
		case BITNOT: {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case NOT: {
				jj_consume_token(NOT);
				break;
			}
			case BITNOT: {
				jj_consume_token(BITNOT);
				break;
			}
			default:
				jj_la1[5] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			break;
		}
		default:
			jj_la1[6] = jj_gen;
			;
		}
		itemExpression();
	}

	/*
	 * Grammar for items
	 */
	final public void itemExpression() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case PLUS:
		case MINUS: {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case PLUS: {
				jj_consume_token(PLUS);
				break;
			}
			case MINUS: {
				jj_consume_token(MINUS);
				break;
			}
			default:
				jj_la1[7] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			break;
		}
		default:
			jj_la1[8] = jj_gen;
			;
		}
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case DECIMAL:
		case BASE1:
		case BASE2:
		case BASE3:
		case BASE4:
		case BASE5:
		case BASE6:
		case BASE7:
		case BASE8:
		case BASE9:
		case BASE10:
		case BASE11:
		case BASE12:
		case BASE13:
		case BASE14:
		case BASE15:
		case BASE16:
		case BASE17:
		case BASE18:
		case BASE19:
		case BASE20:
		case BASE21:
		case BASE22:
		case BASE23:
		case BASE24:
		case BASE25:
		case BASE26:
		case BASE27:
		case BASE28:
		case BASE29:
		case BASE30:
		case BASE31:
		case BASE32:
		case BASE33:
		case BASE34:
		case BASE35:
		case BASE36:
		case BINARY:
		case OCTAL:
		case HEXADECIMAL:
		case FRACTION: {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case DECIMAL: {
				jj_consume_token(DECIMAL);
				break;
			}
			case HEXADECIMAL: {
				jj_consume_token(HEXADECIMAL);
				break;
			}
			case OCTAL: {
				jj_consume_token(OCTAL);
				break;
			}
			case BINARY: {
				jj_consume_token(BINARY);
				break;
			}
			case BASE1: {
				jj_consume_token(BASE1);
				break;
			}
			case BASE2: {
				jj_consume_token(BASE2);
				break;
			}
			case BASE3: {
				jj_consume_token(BASE3);
				break;
			}
			case BASE4: {
				jj_consume_token(BASE4);
				break;
			}
			case BASE5: {
				jj_consume_token(BASE5);
				break;
			}
			case BASE6: {
				jj_consume_token(BASE6);
				break;
			}
			case BASE7: {
				jj_consume_token(BASE7);
				break;
			}
			case BASE8: {
				jj_consume_token(BASE8);
				break;
			}
			case BASE9: {
				jj_consume_token(BASE9);
				break;
			}
			case BASE10: {
				jj_consume_token(BASE10);
				break;
			}
			case BASE11: {
				jj_consume_token(BASE11);
				break;
			}
			case BASE12: {
				jj_consume_token(BASE12);
				break;
			}
			case BASE13: {
				jj_consume_token(BASE13);
				break;
			}
			case BASE14: {
				jj_consume_token(BASE14);
				break;
			}
			case BASE15: {
				jj_consume_token(BASE15);
				break;
			}
			case BASE16: {
				jj_consume_token(BASE16);
				break;
			}
			case BASE17: {
				jj_consume_token(BASE17);
				break;
			}
			case BASE18: {
				jj_consume_token(BASE18);
				break;
			}
			case BASE19: {
				jj_consume_token(BASE19);
				break;
			}
			case BASE20: {
				jj_consume_token(BASE20);
				break;
			}
			case BASE21: {
				jj_consume_token(BASE21);
				break;
			}
			case BASE22: {
				jj_consume_token(BASE22);
				break;
			}
			case BASE23: {
				jj_consume_token(BASE23);
				break;
			}
			case BASE24: {
				jj_consume_token(BASE24);
				break;
			}
			case BASE25: {
				jj_consume_token(BASE25);
				break;
			}
			case BASE26: {
				jj_consume_token(BASE26);
				break;
			}
			case BASE27: {
				jj_consume_token(BASE27);
				break;
			}
			case BASE28: {
				jj_consume_token(BASE28);
				break;
			}
			case BASE29: {
				jj_consume_token(BASE29);
				break;
			}
			case BASE30: {
				jj_consume_token(BASE30);
				break;
			}
			case BASE31: {
				jj_consume_token(BASE31);
				break;
			}
			case BASE32: {
				jj_consume_token(BASE32);
				break;
			}
			case BASE33: {
				jj_consume_token(BASE33);
				break;
			}
			case BASE34: {
				jj_consume_token(BASE34);
				break;
			}
			case BASE35: {
				jj_consume_token(BASE35);
				break;
			}
			case BASE36: {
				jj_consume_token(BASE36);
				break;
			}
			case FRACTION: {
				jj_consume_token(FRACTION);
				break;
			}
			default:
				jj_la1[9] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			break;
		}
		case UNIT:
		case IDENTIFIER:
		case FUNCTION:
		case 125: {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case UNIT:
			case IDENTIFIER:
			case 125: {
				identifier();
				break;
			}
			case FUNCTION: {
				jj_consume_token(FUNCTION);
				break;
			}
			default:
				jj_la1[10] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case LEFT_PAR: {
				jj_consume_token(LEFT_PAR);
				argumentList();
				jj_consume_token(RIGHT_PAR);
				break;
			}
			default:
				jj_la1[11] = jj_gen;
				;
			}
			break;
		}
		case LEFT_PAR: {
			jj_consume_token(LEFT_PAR);
			expression();
			jj_consume_token(RIGHT_PAR);
			break;
		}
		default:
			jj_la1[12] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	/*
	 * Grammar for arguments list
	 */
	final public void argumentList() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
		case LEFT_PAR:
		case PLUS:
		case MINUS:
		case UNIT:
		case NOT:
		case BITNOT:
		case DECIMAL:
		case BASE1:
		case BASE2:
		case BASE3:
		case BASE4:
		case BASE5:
		case BASE6:
		case BASE7:
		case BASE8:
		case BASE9:
		case BASE10:
		case BASE11:
		case BASE12:
		case BASE13:
		case BASE14:
		case BASE15:
		case BASE16:
		case BASE17:
		case BASE18:
		case BASE19:
		case BASE20:
		case BASE21:
		case BASE22:
		case BASE23:
		case BASE24:
		case BASE25:
		case BASE26:
		case BASE27:
		case BASE28:
		case BASE29:
		case BASE30:
		case BASE31:
		case BASE32:
		case BASE33:
		case BASE34:
		case BASE35:
		case BASE36:
		case BINARY:
		case OCTAL:
		case HEXADECIMAL:
		case FRACTION:
		case IDENTIFIER:
		case FUNCTION:
		case 125: {
			expression();
			label_2: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
				case COMMA:
				case SEMICOLON: {
					;
					break;
				}
				default:
					jj_la1[13] = jj_gen;
					break label_2;
				}
				switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
				case COMMA: {
					jj_consume_token(COMMA);
					break;
				}
				case SEMICOLON: {
					jj_consume_token(SEMICOLON);
					break;
				}
				default:
					jj_la1[14] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				expression();
			}
			break;
		}
		default:
			jj_la1[15] = jj_gen;
			;
		}
	}
